--- a/app/src/main/assets/config.json
+++ b/app/src/main/assets/config.json
@@ -11,11 +11,11 @@
     },
     {
       "name": "动画",
-      "url": "/wp/anime.html"
+      "url": "/wp/anime"
     },
     {
       "name": "漫画",
-      "url": "/wp/comic.html"
+      "url": "/wp/comic"
     },
     {
       "name": "游戏",
